@@ -8,7 +8,6 @@ package de.uib.configed.gui;
 
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
@@ -101,8 +100,8 @@ public class CopyClient {
 
 	private void copyProducts() {
 		Map<String, List<Map<String, String>>> mapOfProductStatesAndActions = persistenceController
-				.getDataServices().product.getMapOfProductStatesAndActions(
-						Collections.singleton(clientToCopy.getString(HostInfo.HOSTNAME_KEY)));
+				.getDataServices().product
+						.getMapOfProductStatesAndActions(Set.of(clientToCopy.getString(HostInfo.HOSTNAME_KEY)));
 
 		if (mapOfProductStatesAndActions.isEmpty()) {
 			return;
@@ -130,11 +129,9 @@ public class CopyClient {
 	}
 
 	private int getProductType(String productId) {
-		if (persistenceController.getDataServices().product.getAllLocalbootProductNames().contains(productId)) {
-			return OpsiPackage.TYPE_LOCALBOOT;
-		} else {
-			return OpsiPackage.TYPE_NETBOOT;
-		}
+		return persistenceController.getDataServices().product.getAllLocalbootProductNames().contains(productId)
+				? OpsiPackage.TYPE_LOCALBOOT
+				: OpsiPackage.TYPE_NETBOOT;
 	}
 
 	private void copyProductProperties() {
