@@ -7,7 +7,6 @@
 package de.uib.configed.gui.features.clientselection.elements;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import de.uib.configed.gui.features.clientselection.AbstractSelectElement;
@@ -19,7 +18,7 @@ public class GenericEnumElement extends AbstractSelectElement {
 
 	public GenericEnumElement(String[] enumData, String[] name, String... localizedName) {
 		super(name, localizedName);
-		this.enumData = new ArrayList<>(Arrays.asList(enumData));
+		this.enumData = new ArrayList<>(List.of(enumData));
 	}
 
 	@Override
